--- a/jenkins-slave/maven/Dockerfile
+++ b/jenkins-slave/maven/Dockerfile
@@ -9,3 +9,10 @@ ADD https://raw.githubusercontent.com/absa-subatomic/local-hadron-collider/maste
 RUN update-ca-trust
 
 USER 1001
+
+# Allow adding root CA certificates for custom builds
+ONBUILD USER root
+# Copying the Dockerfile prevents failing on non existent additional certificates (see https://goo.gl/EVBRMg)
+ONBUILD ADD certs/* Dockerfile /etc/pki/ca-trust/source/anchors/
+ONBUILD RUN update-ca-trust
+ONBUILD USER 1001
