Add Subatomic Config Server template
* Added `app` label for better OpenShift console UX

Resolves #18

--- a/jenkins/jenkins-persistent-subatomic-template.yml
+++ b/jenkins/jenkins-persistent-subatomic-template.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Template
 labels:
-  app: jenkins-persistent-subatomic
+  app: subatomic-jenkins
   template: jenkins-persistent-subatomic-template
 metadata:
   annotations:
