--- a/packages/applications/subatomic-app-template.yml
+++ b/packages/applications/subatomic-app-template.yml
@@ -15,6 +15,7 @@ metadata:
     tags: java
     iconClass: icon-spring
 labels:
+  app: ${APP_NAME}
   template: subatomic-app-template
 objects:
   - kind: ImageStream
