--- a/s2i-jdk8-maven3-subatomic/Dockerfile
+++ b/s2i-jdk8-maven3-subatomic/Dockerfile
@@ -118,10 +118,10 @@ VOLUME /newrelic/logs/
 
 USER 1001
 
-# Allow adding root CA certificates for custom builds
-ONBUILD USER root
-# Copying the Dockerfile prevents failing on non existent additional certificates (see https://goo.gl/EVBRMg)
-ONBUILD ADD certs/* Dockerfile /etc/pki/ca-trust/source/anchors/
-ONBUILD RUN update-ca-trust
-ONBUILD USER 1001
-# ===
+# # Allow adding root CA certificates for custom builds
+# ONBUILD USER root
+# # Copying the Dockerfile prevents failing on non existent additional certificates (see https://goo.gl/EVBRMg)
+# ONBUILD ADD certs/* Dockerfile /etc/pki/ca-trust/source/anchors/
+# ONBUILD RUN update-ca-trust
+# ONBUILD USER 1001
+# # ===
