--- a/jenkins-slave/maven/Dockerfile
+++ b/jenkins-slave/maven/Dockerfile
@@ -10,9 +10,9 @@ RUN update-ca-trust
 
 USER 1001
 
-# Allow adding root CA certificates for custom builds
-ONBUILD USER root
-# Copying the Dockerfile prevents failing on non existent additional certificates (see https://goo.gl/EVBRMg)
-ONBUILD ADD certs/* Dockerfile /etc/pki/ca-trust/source/anchors/
-ONBUILD RUN update-ca-trust
-ONBUILD USER 1001
+# # Allow adding root CA certificates for custom builds
+# ONBUILD USER root
+# # Copying the Dockerfile prevents failing on non existent additional certificates (see https://goo.gl/EVBRMg)
+# ONBUILD ADD certs/* Dockerfile /etc/pki/ca-trust/source/anchors/
+# ONBUILD RUN update-ca-trust
+# ONBUILD USER 1001
