Add NodeJS Jenkins slave
Resolves #22

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ services:
 script:
   - docker build jenkins
   - docker build jenkins-slave/maven
+  - docker build jenkins-slave/nodejs
   - docker build s2i-jdk8-maven3-subatomic
