#29 remove slave CPU and memory limits

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -7,6 +7,10 @@ USER root
 ADD https://raw.githubusercontent.com/absa-subatomic/local-hadron-collider/master/minishift-addons/subatomic/certs/subatomic-ca-chain.pem /etc/pki/ca-trust/source/anchors/subatomic-ca-chain.crt
 RUN update-ca-trust
 
+# Remove Kube limits for slaves
+RUN sed -i -e 's/resourceLimitCpu></resourceLimitCpu>0</g' /usr/local/bin/kube-slave-common.sh && \
+    sed -i -e 's/resourceLimitMemory></resourceLimitMemory>0</g' /usr/local/bin/kube-slave-common.sh
+
 # Add base and addtional plugins
 COPY base-plugins.txt /opt/openshift/base-plugins.txt
 RUN /usr/local/bin/install-plugins.sh /opt/openshift/base-plugins.txt
