adding a label to the template for searching purposes

--- a/packages/applications/subatomic-app-template.yml
+++ b/packages/applications/subatomic-app-template.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Template
 metadata:
   name: subatomic-app-template
+  labels:
+    usage: "subatomic-app"
   annotations:
     openshift.io/display-name: Subatomic Application Template
     description: |-
