--- a/packages/applications/subatomic-spring-boot-1x-template.yml
+++ b/packages/applications/subatomic-spring-boot-1x-template.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Template
 metadata:
-  name: subatomic-app-template
+  name: subatomic-spring-boot-1x-template
   labels:
     usage: "subatomic-app"
   annotations:
     openshift.io/display-name: Subatomic Application Template
     description: |-
-      Simple Subatomic Spring Boot application template.
+      Simple Subatomic Spring Boot 1 application template.
       
       NOTE: This Template contains no Service or Route resources and therefore not suited for web applications.
     openshift.io/provider-display-name: Subatomic
@@ -17,7 +17,7 @@ metadata:
     tags: java
     iconClass: icon-spring
 labels:
-  template: subatomic-app-template
+  template: subatomic-spring-boot-1x-template
 objects:
   - kind: ImageStream
     apiVersion: v1
@@ -27,7 +27,7 @@ objects:
     kind: DeploymentConfig
     metadata:
       labels:
-        template: subatomic-app-template
+        template: subatomic-spring-boot-1x-template
       name: ${APP_NAME}
     spec:
       replicas: 1    
