--- a/jenkins-slave/nodejs/Dockerfile
+++ b/jenkins-slave/nodejs/Dockerfile
@@ -19,14 +19,16 @@ RUN yum install -y centos-release-scl-rh && \
     rpm -V $INSTALL_PKGS && \
     yum clean all -y && rm -rf /var/cache/yum       
 
-RUN scl enable rh-nodejs8 bash
-
 # Add Subatomic trusted Root CA's
 USER root
 ADD https://raw.githubusercontent.com/absa-subatomic/local-hadron-collider/master/minishift-addons/subatomic/certs/subatomic-ca-chain.pem /etc/pki/ca-trust/source/anchors/subatomic-ca-chain.crt
 RUN update-ca-trust
 
 USER 1001
+
+# Make sure the above SCLs are already enabled
+ENTRYPOINT ["/usr/bin/scl", "enable", "rh-nodejs8"]
+CMD ["/usr/bin/scl", "enable", "rh-nodejs8"]
 
 # # Allow adding root CA certificates for custom builds
 # ONBUILD USER root
