Add s2i-nodejs-nginx-subatomic to the Travis Docker builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ script:
   - docker build jenkins-slave/maven
   - docker build jenkins-slave/nodejs
   - docker build s2i-jdk8-maven3-subatomic
+  - docker build s2i-nodejs-nginx-subatomic
