--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,6 +1,6 @@
-FROM openshift/jenkins-2-centos7:v3.10
+FROM openshift/jenkins-2-centos7:v3.9
 
-LABEL subatomic-version="2.0"
+LABEL subatomic-version="2.1"
 
 # Add Subatomic trusted Root CA's
 USER root
@@ -11,11 +11,11 @@ RUN update-ca-trust
 RUN sed -i -e 's/resourceLimitCpu></resourceLimitCpu>0</g' /usr/local/bin/kube-slave-common.sh && \
     sed -i -e 's/resourceLimitMemory></resourceLimitMemory>0</g' /usr/local/bin/kube-slave-common.sh
 
-# Add base and addtional plugins
-# COPY base-plugins.txt /opt/openshift/base-plugins.txt
-# RUN /usr/local/bin/install-plugins.sh /opt/openshift/base-plugins.txt
-# COPY plugins.txt /opt/openshift/configuration/plugins.txt
-# RUN /usr/local/bin/install-plugins.sh /opt/openshift/configuration/plugins.txt
+# Add base and addtional plugins 
+COPY base-plugins.txt /opt/openshift/base-plugins.txt
+RUN /usr/local/bin/install-plugins.sh /opt/openshift/base-plugins.txt
+COPY plugins.txt /opt/openshift/configuration/plugins.txt
+RUN /usr/local/bin/install-plugins.sh /opt/openshift/configuration/plugins.txt
 
 # Remove the OpenShift sample Job
 RUN rm -rf /opt/openshift/configuration/jobs
