--- a/jenkins/jenkins-persistent-subatomic-template.yml
+++ b/jenkins/jenkins-persistent-subatomic-template.yml
@@ -86,6 +86,8 @@ objects:
                 value: jenkins
               - name: JNLP_SERVICE_NAME
                 value: jenkins-jnlp
+              - name: OPENSHIFT_JENKINS_JVM_ARCH
+                value: x86_64
             livenessProbe:
               failureThreshold: 30
               httpGet:
