--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ script:
   - docker build jenkins-slave/nodejs
   - docker build s2i-jdk8-maven3-subatomic
   - docker build s2i-nodejs-nginx-subatomic
+  - docker build s2i-python36-subatomic
