Trying to add cert to java keystore to get git working

--- a/jenkins-slave/python36/Dockerfile
+++ b/jenkins-slave/python36/Dockerfile
@@ -42,6 +42,14 @@ RUN source scl_source enable rh-python36 && \
 # Add Subatomic trusted Root CA's
 
 ADD https://raw.githubusercontent.com/absa-subatomic/local-hadron-collider/master/minishift-addons/subatomic/certs/subatomic.ca.crt /etc/pki/ca-trust/source/anchors/subatomic-ca-chain.crt
+
+RUN keytool -importcert \
+  -file /etc/pki/ca-trust/source/anchors/subatomic-ca-chain.crt \
+  -alias subatomic.local \
+  -keystore $JAVA_HOME/jre/lib/security/cacerts \
+  -storepass changeit \
+  -noprompt
+
 RUN update-ca-trust
 
 USER 1001
