Added encryption to config server
Added encryption to config server

--- a/packages/applications/subatomic-config-server-template.yml
+++ b/packages/applications/subatomic-config-server-template.yml
@@ -59,6 +59,10 @@ objects:
                   value: /subatomic-config-server/configs
                 - name: JAVA_MAX_CORE
                   value: ${LIMITS_CPU}
+                - name: ENCRYPT_KEY
+                  value: "${ENCRYPT_KEY}"
+                - name: DECRYPT_KEY
+                  value: "${ENCRYPT_KEY}"
                 - name: JAVA_OPTIONS
                   value: '-Djava.net.preferIPv4Stack=true -Djava.security.egd=file:/dev/./urandom -javaagent:/newrelic/newrelic.jar -Dnewrelic.config.file=/newrelic/newrelic.yml'
               ports:
@@ -162,3 +166,8 @@ parameters:
     displayName: Memory resource limit
     required: false
     value: 512Mi
+  - name: ENCRYPT_KEY
+    displayName: Encryption and decryption key
+    from: '[a-zA-Z0-9]{32}'
+    generate: expression
+    required: true
